# sale_p4tagonia

./: .gitignore  README.md  pyproject.toml
notebooks/: data_cleaning.ipynb  data_cleaning_and_feature_engineering.ipynb  feature_engineering.ipynb  sales.ipynb  sales_model.ipynb
sales/: __init__.py  common.py  data_holder.py  data_info.py  feature_engineering.py
sales/f_engineering/: warehouse_related_features.py
sales/feature_engineering/: cc_related_features.py  company_related_features.py  date_related_features.py  sku_related_features.py  warehouse_related_features.py
test/: __init__.py  test_common.py  test_data_holder.py  test_feature_engineering.py
test/data/: sample_sales_data.csv
test/test_f_engineering/: test_warehouse_related_features.py
test/test_feature_engineering/: test_cc_related_features.py  test_company_related_features.py  test_date_related_features.py  test_sku_related_features.py  test_warehouse_related_features.py
